test/route.yaml
apiVersion: route.openshift.io/v1
kind: Route
metadata:
  name: hello-app
  namespace: hello
spec:
  port:
    targetPort: 8080
  to:
    kind: Service
    name: hello-app
    weight: 100
  wildcardPolicy: None
